[gd_scene load_steps=2 format=2]

[ext_resource path="res://Domino/DominoContainer.gd" type="Script" id=1]

[node name="DominoContainer" type="HBoxContainer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 44.0
margin_bottom = 20.0

[node name="LeftTile" type="Button" parent="HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 1
text = "0"

[node name="RightTile" type="Button" parent="HBoxContainer"]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 20.0
mouse_filter = 1
text = "0"

[node name="Popup" type="Popup" parent="."]
margin_left = 48.0
margin_right = 48.0
margin_bottom = 20.0

[node name="NameField" type="TextEdit" parent="Popup"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 20.0
